// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expenses correctly 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </p>
</div>
`;

exports[`should render ExpensesSummary with multiple expenses correctly 1`] = `
<div>
  <p>
    Viewing 
    23
     
    expenses
     totalling 
    $1,490,584.05
  </p>
</div>
`;
